Fix file list on mobile (#79)

--- a/src/components/common/directory-tree-line/directory-tree-line.css
+++ b/src/components/common/directory-tree-line/directory-tree-line.css
@@ -1,29 +1,40 @@
+
+/* overriding antd css */
+.ant-tree.ant-tree-directory .ant-tree-treenode:hover::before {
+  background-color: #20bf6b40 !important;
+}
+
+/* overriding antd css */
+.ant-tree-treenode .ant-tree-node-content-wrapper {
+  overflow-x: hidden;
+}
+
 .directory-tree-line {
   display: flex;
-  justify-content: space-between;
-  height: 30px;
+  flex-direction: row;
+  justify-content:space-between;
+}
+
+.directory-tree-line__nodename {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  flex: auto;
+}
+
+.directory-tree-line__buttons {
+  flex: none;
 }
 
 .directory-tree-line__btn {
   margin-top: 3px;
 }
 
-.directory-tree-line__btn.download {
+.directory-tree-line__btn--download {
   margin-right: 5px;
-  
 }
 
-.ant-tree.ant-tree-directory .ant-tree-treenode:hover::before {
-  background-color: #20bf6b40 !important;
-}
-
-@media (min-width: 480px) {
-  .directory-tree-line__filename {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    max-width: auto;
-  }
+@media (min-width: 1025px) {
   .directory-tree-line__buttons {
     visibility: hidden;
   }
@@ -32,14 +43,12 @@
   }
 }
 
-@media (max-width: 480px) {
-  .directory-tree-line__filename {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    max-width: 200px;
-  }
+@media (max-width: 1025px) {
   .directory-tree-line__buttons {
     visibility: visible;
+  }
+
+  .directory-tree-line__btn--download {
+    margin-left: 5px;
   }
 }
